# dns_server

./: 01_project.bat  01_project.sh  CMakeLists.txt  CMakePresets.json  README.md  client.cpp  dns.cpp  dns.h  dns_server.json  params.h  server.cpp  vcpkg.json
libdns/: CMakeLists.txt  dns.cpp  dns.h  dns_answer.cpp  dns_answer.h  dns_auth_server.cpp  dns_auth_server.h  dns_buffer.cpp  dns_buffer.h  dns_client.cpp  dns_client.h  dns_consts.cpp  dns_consts.h  dns_header.cpp  dns_header.h  dns_package.cpp  dns_package.h  dns_request.cpp  dns_request.h  dns_selector.cpp  dns_selector.h  dns_selector_posix.cpp  dns_selector_win32.cpp  dns_socket.cpp  dns_socket.h  dns_utils.cpp  dns_utils.h
tests/: CMakeLists.txt  tst_dns.cpp
